force-app/main/default/objects/PartnerFundRequest_CDM_FMM__mdt/PartnerFundRequest_CDM_FMM__mdt.object-meta.xml
<CustomObject>
    <label>PartnerFundRequest CDM FMM</label>
    <pluralLabel>PartnerFundRequest CDM FMM</pluralLabel>
</CustomObject>