force-app/main/default/objects/PartnerFundRequest_CDM_FMM__mdt/fields/CDM_Id__c.field-meta.xml
<CustomField>
    <fullName>CDM_Id__c</fullName>
    <label>CDM Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>