force-app/main/default/objects/PartnerFundRequest_CDM_FMM__mdt/fields/FMM_Id__c.field-meta.xml
<CustomField>
    <fullName>FMM_Id__c</fullName>
    <label>FMM Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>