force-app/main/default/objects/PartnerFundRequest_CDM_FMM__mdt/fields/FMM_Name__c.field-meta.xml
<CustomField>
    <fullName>FMM_Name__c</fullName>
    <label>FMM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>