force-app/main/default/objects/PartnerFundRequest_CDM_FMM__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CDM_Id__c</columns>
    <columns>FMM_Id__c</columns>
    <columns>FMM_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>